# TosiSopivaLaskutus

./: .gitignore  CMakeLists.txt  Projekt_presentaatio.pptx  README.md  Toteutussuunnitelma_Team_Azure.docx  Vaatimusmäärittely_Team_Azure.docx  e-commerce.sql
DatabaseEngine/: CMakeLists.txt  DBEngineLibraryExports.h
DatabaseEngine/engine/: DatabaseEngine.c  DatabaseEngine.h  DatabaseUtility.c  DatabaseUtility.h  ErrorStructure.h  SqlErrorUtil.c  SqlErrorUtil.h  Utilities.c  Utilities.h  cJSON.c  list.c  list.h
app/: BankReferenceCalculator.c  BankReferenceCalculator.h  CMakeLists.txt  main.c
enc_temp_folder/0d902a2e24b5536c37e89155218f/: DatabaseEngine.c
